tests/expectations/parser/functions/mode_outside_tuple.out
Error [EPAR0370005]: expected an identifier -- found '('
    --> test:3:15
     |
   3 |     transition(a: u8) -> public (u8, u8) {
     |               ^
